# Platypus-Type-Extensions

./: .gitignore  README.md  pyproject.toml
custom_types/: __init__.py  _tools.py  core.py  utils.py
custom_types/bins_and_sets/: _tools.py  bins_and_sets.py
custom_types/distributions/: _bounds_tools.py  _crossover_tools.py  _distribution_tools.py  _mutation_tools.py  ex_bijection_funcs.py  example_bijections.py  monotonic_distributions.py  point_bounds.py  real_bijection.py  symmetric_bijection.py  symmetric_distributions.py
custom_types/experimental/: global_evolution2.py
custom_types/global_evolutions/: _generic_type_tools.py  basic_global_evolution.py  general_global_evolution.py  global_differential.py  global_pcx.py
custom_types/integer_methods/: integer_methods.py
custom_types/lists_and_ranges/: _tools.py  lists_ranges.py
custom_types/real_methods/: numba_differential.py  numba_mutate.py  numba_pcx.py  numba_spx.py
platypus_extensions/: __init__.py  _tools.py  core.py  utils.py
platypus_extensions/bins_and_sets/: _tools.py  bins_and_sets.py
platypus_extensions/distribution_extension/: pyproject.toml
platypus_extensions/distributions/: __init__.py  _crossover_tools.py  _mutation_tools.py  monotonic_distributions.py  point_bounds.py  pyproject.toml  symmetric_distributions.py
platypus_extensions/experimental/: global_evolution2.py  global_pcx.py
platypus_extensions/global_evolutions/: _generic_type_tools.py  general_global_evolution.py  global_differential.py
platypus_extensions/integer_methods/: integer_methods.py
platypus_extensions/lists_and_ranges/: lists_ranges.py
platypus_extensions/real_methods/: numba_differential.py  numba_mutate.py  numba_pcx.py
platypus_type_extensions.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  run_tests.py  test_real_methods.py  test_speeds.py
tests/test_bins_sets/: conftest.py  test_bins_sets.py
tests/test_core/: confglobal.py  conftest.py  test_core.py  test_global_evolution.py
tests/test_distributions/: conftest.py  test_bounds.py  test_distributions.py
tests/test_list_ranges/: conftest.py  (+1 more)
(+40 files in other folders)
